crates/kul-svg/tests/snapshots/corpus__example_01_single_couple.snap
---
source: crates/kul-svg/tests/corpus.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 398 112" width="398" height="112">
<path class="kul-edge kul-edge--marriage kul-edge--in-tree" fill="none" d="M 184 56 L 214 56"/>
<g class="kul-card kul-card--canonical">
<rect x="24" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="104" y="56" text-anchor="middle" dominant-baseline="central">Alice Sharma</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="214" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="294" y="56" text-anchor="middle" dominant-baseline="central">Bob Sharma</text>
</g>
</svg>
