crates/kul-svg/tests/snapshots/corpus__example_02_three_generations.snap
---
source: crates/kul-svg/tests/corpus.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 432" width="400" height="432">
<path class="kul-edge kul-edge--birth kul-edge--in-tree" fill="none" d="M 200 56 L 200 146 Q 200 156 190 156 L 115 156 Q 105 156 105 166 L 105 184"/>
<path class="kul-edge kul-edge--birth kul-edge--in-tree" fill="none" d="M 200 216 L 200 306 Q 200 316 190 316 L 114 316 Q 104 316 104 326 L 104 344"/>
<path class="kul-edge kul-edge--birth kul-edge--in-tree" fill="none" d="M 200 216 L 200 306 Q 200 316 210 316 L 286 316 Q 296 316 296 326 L 296 344"/>
<path class="kul-edge kul-edge--marriage kul-edge--in-tree" fill="none" d="M 185 56 L 215 56"/>
<path class="kul-edge kul-edge--marriage kul-edge--in-tree" fill="none" d="M 185 216 L 215 216"/>
<g class="kul-card kul-card--canonical">
<rect x="25" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="105" y="56" text-anchor="middle" dominant-baseline="central">Chinua Okeke</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="215" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="295" y="56" text-anchor="middle" dominant-baseline="central">Adaeze Okeke</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="25" y="184" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="105" y="216" text-anchor="middle" dominant-baseline="central">Emeka Okeke</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="215" y="184" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="295" y="216" text-anchor="middle" dominant-baseline="central">Ngozi Okeke</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="24" y="344" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="104" y="376" text-anchor="middle" dominant-baseline="central">Chidi Okeke</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="216" y="344" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="296" y="376" text-anchor="middle" dominant-baseline="central">Amara Okeke</text>
</g>
</svg>
