crates/kul-svg/tests/snapshots/corpus__example_03_divorce_and_remarriage.snap
---
source: crates/kul-svg/tests/corpus.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1162 272" width="1162" height="272">
<path class="kul-edge kul-edge--birth kul-edge--in-tree" fill="none" d="M 199 56 L 199 156 L 199 156 L 199 184"/>
<path class="kul-edge kul-edge--birth kul-edge--in-tree" fill="none" d="M 581 56 L 581 156 L 581 156 L 581 184"/>
<path class="kul-edge kul-edge--birth kul-edge--in-tree" fill="none" d="M 963 56 L 963 156 L 963 156 L 963 184"/>
<path class="kul-edge kul-edge--marriage kul-edge--in-tree kul-edge--ended" fill="none" d="M 184 56 L 214 56"/>
<path class="kul-edge kul-edge--marriage kul-edge--in-tree" fill="none" d="M 566 56 L 596 56"/>
<path class="kul-edge kul-edge--marriage kul-edge--in-tree" fill="none" d="M 948 56 L 978 56"/>
<g class="kul-card kul-card--ghost">
<rect x="24" y="24" width="160" height="64" rx="8" ry="8" stroke-dasharray="3 2"/>
<text class="kul-label-name" x="104" y="56" text-anchor="middle" dominant-baseline="central">Erik Lindqvist</text>
<text class="kul-ghost-badge" x="172" y="38" text-anchor="middle">↺</text>
</g>
<g class="kul-card kul-card--ghost">
<rect x="214" y="24" width="160" height="64" rx="8" ry="8" stroke-dasharray="3 2"/>
<text class="kul-label-name" x="294" y="56" text-anchor="middle" dominant-baseline="central">Astrid Lindqvist</text>
<text class="kul-ghost-badge" x="362" y="38" text-anchor="middle">↺</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="119" y="184" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="199" y="216" text-anchor="middle" dominant-baseline="central">Linnea Lindqvist</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="406" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="486" y="56" text-anchor="middle" dominant-baseline="central">Erik Lindqvist</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="596" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="676" y="56" text-anchor="middle" dominant-baseline="central">Maja Holm</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="501" y="184" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="581" y="216" text-anchor="middle" dominant-baseline="central">Oskar Lindqvist</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="788" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="868" y="56" text-anchor="middle" dominant-baseline="central">Astrid Lindqvist</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="978" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="1058" y="56" text-anchor="middle" dominant-baseline="central">Johan Berg</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="883" y="184" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="963" y="216" text-anchor="middle" dominant-baseline="central">Frida Berg</text>
</g>
</svg>
