crates/kul-svg/tests/snapshots/corpus__example_04_adoption_and_belonging.snap
---
source: crates/kul-svg/tests/corpus.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1356 272" width="1356" height="272">
<path class="kul-edge kul-edge--birth kul-edge--in-tree" fill="none" d="M 296 56 L 296 146 Q 296 156 286 156 L 114 156 Q 104 156 104 166 L 104 184"/>
<path class="kul-edge kul-edge--adoption kul-edge--in-tree" fill="none" d="M 296 56 L 296 156 L 296 156 L 296 184" stroke-dasharray="6 4"/>
<path class="kul-edge kul-edge--birth kul-edge--in-tree" fill="none" d="M 775 56 L 775 156 L 775 156 L 775 184"/>
<path class="kul-edge kul-edge--adoption kul-edge--in-tree" fill="none" d="M 1157 56 L 1157 156 L 1157 156 L 1157 184" stroke-dasharray="6 4"/>
<path class="kul-edge kul-edge--adoption kul-edge--in-tree" fill="none" d="M 296 56 L 296 146 Q 296 156 306 156 L 478 156 Q 488 156 488 166 L 488 184" stroke-dasharray="6 4"/>
<path class="kul-edge kul-edge--marriage kul-edge--in-tree" fill="none" d="M 281 56 L 311 56"/>
<path class="kul-edge kul-edge--marriage kul-edge--in-tree" fill="none" d="M 760 56 L 790 56"/>
<path class="kul-edge kul-edge--marriage kul-edge--in-tree" fill="none" d="M 1142 56 L 1172 56"/>
<g class="kul-card kul-card--canonical">
<rect x="121" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="201" y="56" text-anchor="middle" dominant-baseline="central">Carlos Mendoza</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="311" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="391" y="56" text-anchor="middle" dominant-baseline="central">Rosa Mendoza</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="24" y="184" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="104" y="216" text-anchor="middle" dominant-baseline="central">Mateo Mendoza</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="216" y="184" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="296" y="216" text-anchor="middle" dominant-baseline="central">Bayani Mendoza</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="408" y="184" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="488" y="216" text-anchor="middle" dominant-baseline="central">Dalisay Mendoza</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="600" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="680" y="56" text-anchor="middle" dominant-baseline="central">Eduardo Reyes</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="790" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="870" y="56" text-anchor="middle" dominant-baseline="central">Luz Reyes</text>
</g>
<g class="kul-card kul-card--ghost">
<rect x="695" y="184" width="160" height="64" rx="8" ry="8" stroke-dasharray="3 2"/>
<text class="kul-label-name" x="775" y="216" text-anchor="middle" dominant-baseline="central">Dalisay Mendoza</text>
<text class="kul-ghost-badge" x="843" y="198" text-anchor="middle">↺</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="982" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="1062" y="56" text-anchor="middle" dominant-baseline="central">Tomas Garcia</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="1172" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="1252" y="56" text-anchor="middle" dominant-baseline="central">Elena Garcia</text>
</g>
<g class="kul-card kul-card--ghost">
<rect x="1077" y="184" width="160" height="64" rx="8" ry="8" stroke-dasharray="3 2"/>
<text class="kul-label-name" x="1157" y="216" text-anchor="middle" dominant-baseline="central">Dalisay Mendoza</text>
<text class="kul-ghost-badge" x="1225" y="198" text-anchor="middle">↺</text>
</g>
</svg>
