crates/kul-svg/tests/snapshots/corpus__example_04_polygamous_family.snap
---
source: crates/kul-svg/tests/corpus.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460 272" width="460" height="272">
<path class="kul-fan-connector" data-hub-id="devraj" fill="none" d="M 230 88 L 230 117"/>
<path class="kul-fan-connector" data-hub-id="devraj" fill="none" d="M 199 117 L 261 117"/>
<path class="kul-fan-connector" data-hub-id="devraj" fill="none" d="M 199 117 L 199 131"/>
<path class="kul-fan-connector" data-hub-id="devraj" fill="none" d="M 261 117 L 261 131"/>
<path class="kul-edge kul-edge--birth kul-edge--in-tree" fill="none" d="M 261 141 L 261 148.5 Q 261 156 268.5 156 L 331 156 Q 341 156 341 166 L 341 184"/>
<rect class="kul-bar" x="190" y="131" width="18" height="10"/>
<rect class="kul-bar" x="252" y="131" width="18" height="10"/>
<g class="kul-card kul-card--canonical">
<rect x="150" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="230" y="56" text-anchor="middle" dominant-baseline="central">Devraj Kumar</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="24" y="104" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="104" y="136" text-anchor="middle" dominant-baseline="central">Meera</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="276" y="104" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="356" y="136" text-anchor="middle" dominant-baseline="central">Alice Sharma</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="261" y="184" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="341" y="216" text-anchor="middle" dominant-baseline="central">Priya Kumar</text>
</g>
</svg>
