crates/kul-svg/tests/snapshots/corpus__example_05_married_siblings.snap
---
source: crates/kul-svg/tests/corpus.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 780 272" width="780" height="272">
<path class="kul-edge kul-edge--birth kul-edge--in-tree" fill="none" d="M 390 61 L 390 146 Q 390 156 380 156 L 114 156 Q 104 156 104 166 L 104 184"/>
<path class="kul-edge kul-edge--birth kul-edge--in-tree" fill="none" d="M 390 61 L 390 146 Q 390 156 400 156 L 476 156 Q 486 156 486 166 L 486 184"/>
<rect class="kul-bar" x="381" y="51" width="18" height="10"/>
<rect class="kul-bar" x="190" y="211" width="18" height="10"/>
<rect class="kul-bar" x="572" y="211" width="18" height="10"/>
<g class="kul-card kul-card--canonical">
<rect x="215" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="295" y="56" text-anchor="middle" dominant-baseline="central">Ramesh Sharma</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="405" y="24" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="485" y="56" text-anchor="middle" dominant-baseline="central">Sita Sharma</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="24" y="184" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="104" y="216" text-anchor="middle" dominant-baseline="central">Arjun Sharma</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="214" y="184" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="294" y="216" text-anchor="middle" dominant-baseline="central">Priya Sharma</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="406" y="184" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="486" y="216" text-anchor="middle" dominant-baseline="central">Vikram Sharma</text>
</g>
<g class="kul-card kul-card--canonical">
<rect x="596" y="184" width="160" height="64" rx="8" ry="8"/>
<text class="kul-label-name" x="676" y="216" text-anchor="middle" dominant-baseline="central">Nisha Sharma</text>
</g>
</svg>
